--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="header">
         
-        <img src="./img/background.svg" class="illustration"/>
+        <img src="./img/background.svg" class="illustration" draggable="false"/>
 
         <div>
           <div class="animate"></div>
