--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="nav-links" style="overflow: hidden;">
             <a href="#features">Features</a>
             <a href="#contact">Contact Us</a>
-            <a href="#">Add extension</a>
+            <a href="./files/whatsthat.zip">Add extension</a>
             <a href="Documentation.html">Documentation</a>
         </div>
     </section>
@@ -41,7 +41,7 @@
           <p>
             <form action="">
               <label for="extension">
-                <button class="callto">Add to my browser</button>
+                <a href="./files/whatsthat.zip" class="callto">Add to my browser</a>
               </label>
             </form><br>
             &#9733;&#9733;&#9733;&#9733;&#9734; 4.0<br>
