--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
           <div class="nav-title">
-             <img src="./img/logo.svg" style="height: 70%;"/> 
+             <img src="./img/logo.svg" style="height: 100%;"/> 
           </div>
         </div>
         <div class="nav-btn">
@@ -27,7 +27,7 @@
             <a href="#features">Features</a>
             <a href="#contact">Contact Us</a>
             <a href="./files/whatsthat.zip">Add extension</a>
-            <a href="Documentation.html">Documentation</a>
+            <a href="./Docs/index.html">Documentation</a>
         </div>
     </section>
 
@@ -198,9 +198,7 @@
         <a>Terms of Use</a>
       </div>
     </div>
-</body>
-
-  <script>
+    <script>
     let slideIndex = 1;
     showSlides(slideIndex);
     
@@ -228,4 +226,7 @@
       dots[slideIndex-1].className += " active";
     }
     </script>
+</body>
+
+  
 </html>
