add ad and some description

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="content">
       <div class="fade_in left">
         <h2 class="main">New to slang world ?</h2>
-        <h5>No worries, we've got your back !</h5>
+        <h5>Are you new to slang world? If yes, then let us introduce our "What's That?" extension which will help you to increase your slang vocabulary. Slangs? You definitely had encountered one on Whatsapp and then you go searching for it's full form on your favourite search engine but wait, now no more need to go there as we are here to tell you their full forms with just one click.</h5>
       </div>
 
       <div class="fade_in right">
@@ -75,7 +75,7 @@
 
       <div class="fade_in right">
         <h2 class="main">Does n-word annoy you ?</h2>
-        <h5>No worries, we've got your back again !</h5>
+        <h5>Most of us love to express our thoughts through cuss words but only a few of us like to hear the same. Which one are you? We choose to be the latter one and as a result, we came up with something new which will help you to hide all the cuss words sent to you on Whatsapp so that you can chat unhesitantly. But wait... We even have something for the former one's. Yes, they can share their messages on Whatsapp having cuss words which won't be in a readable format but will be represented by an asterisk (*).</h5>
       </div>
     </div>
 
@@ -88,7 +88,7 @@
   </div>
 
   <div class="video">
-    <video src="./videos/1. About this Course.mp4" muted="true" controls></video>
+    <video src="./videos/whats_that_ad.m4v" muted="true" controls></video>
   </div>
     <!--                                                              Carousel                                           -->
 
