--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       observer2.observe(e);
     })
 
-    function onclick(){
+    function uncheck(){
       let checkbox=document.querySelector('#nav-check');
       if(checkbox.checked)
       checkbox.checked=false;
