update social links

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           <div class="border1"></div>
             <div class="ul-cry">
               <span>Group 11, AI_Projects</span>
-              <span>123456789</span>
-              <span>xyz@gmail.com</span>
+              <span>8320112239</span>
+              <span>parthnvaswani@gmail.com</span>
             </div>
         </div>
 
@@ -170,10 +170,10 @@
           <h3>Support us</h3>
           <div class="border1"></div>
             <div class="ul">
-              <a href="#" class="fa fa-instagram"><span> Instagram</span></a>
-              <a href="#" class="fa fa-facebook"><span> Facebook</span></a>
-              <a href="#" class="fa fa-twitter"><span> Twitter</span></a>
-              <a href="#" class="fa fa-google"><span> Gmail</span></a>
+              <a href="https://www.instagram.com/parthnvaswani/" class="fa fa-instagram"><span> Instagram</span></a>
+              <a href="https://www.facebook.com/parth.vaswani.77/" class="fa fa-facebook"><span> Facebook</span></a>
+              <a href="https://twitter.com/parthnvaswani" class="fa fa-twitter"><span> Twitter</span></a>
+              <a href="parthnvaswani@gmail.com" class="fa fa-google"><span> Gmail</span></a>
             </div> 
         </div>
 
