--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
           <h3>Quick Links</h3>
           <div class="border1"></div> <!--for the underline -->
             <div class="ul">
-              <a href="#"><span>Home</span></a>
-              <a href="#"><span>Description</span></a>
-              <a href="#"><span>Download</span></a>
-              <a href="#"><span>About</span></a>
+              <a href="/"><span>Home</span></a>
+              <a href="./Docs/index.html"><span>Documentation</span></a>
+              <a href="./files/whatsthat.zip"><span>Download</span></a>
+              <a href="https://github.com/parthnvaswani"><span>About</span></a>
             </div>
         </div>
     
@@ -161,7 +161,6 @@
           <div class="border1"></div>
             <div class="ul-cry">
               <span>Group 11, AI_Projects</span>
-              <span>8320112239</span>
               <span>parthnvaswani@gmail.com</span>
             </div>
         </div>
@@ -173,7 +172,7 @@
               <a href="https://www.instagram.com/parthnvaswani/" class="fa fa-instagram"><span> Instagram</span></a>
               <a href="https://www.facebook.com/parth.vaswani.77/" class="fa fa-facebook"><span> Facebook</span></a>
               <a href="https://twitter.com/parthnvaswani" class="fa fa-twitter"><span> Twitter</span></a>
-              <a href="parthnvaswani@gmail.com" class="fa fa-google"><span> Gmail</span></a>
+              <a href="mailto:parthnvaswani@gmail.com" class="fa fa-google"><span> Gmail</span></a>
             </div> 
         </div>
 
