--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <h3>Quick Links</h3>
           <div class="border1"></div> <!--for the underline -->
             <div class="ul">
-              <a href="/"><span>Home</span></a>
+              <a href="./"><span>Home</span></a>
               <a href="./Docs/index.html"><span>Documentation</span></a>
               <a href="./files/whatsthat.zip"><span>Download</span></a>
               <a href="https://github.com/parthnvaswani"><span>About</span></a>
